kubernetes.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: finance
    annotations:
        traefik.ingress.kubernetes.io/router.tls: "true"
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
        traefik.ingress.kubernetes.io/router.middlewares: api-prefix@file

spec:
    ingressClassName: traefik
    rules:
      - host: finance.valdum.dev
        http:
            paths:
              - path: /api
                pathType: Prefix
                backend:
                    service:
                        name: finance
                        port:
                            name: http

---
apiVersion: v1
kind: Service

metadata:
    name: finance

spec:
    type: ClusterIP
    selector:
        app: finance
    sessionAffinity: None
    ports:
      - name: http
        protocol: TCP
        port: 80
        targetPort: api

---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: finance

spec:
    replicas: 1
    minReadySeconds: 15
    revisionHistoryLimit: 1

    strategy:
        rollingUpdate:
            maxSurge: 1
            maxUnavailable: 0

    selector:
        matchLabels:
            app: finance

    template:
        metadata:
            labels:
                app: finance
                dozzle: "true"

        spec:
            containers:
              - name: finance
                image: ghcr.io/v4ldum/finance:latest
                imagePullPolicy: Always

                ports:
                  - name: api
                    containerPort: 7878 # Needs to stay in sync with PORT in ConfigMap

                startupProbe:
                    periodSeconds: 5
                    failureThreshold: 30
                    httpGet:
                        path: /health/ready
                        port: api
                livenessProbe:
                    httpGet:
                        path: /health/live
                        port: api
                readinessProbe:
                    timeoutSeconds: 3
                    httpGet:
                        path: /health/ready
                        port: api

                volumeMounts:
                  - mountPath: /app/db
                    name: db

            volumes:
              - name: db
                hostPath:
                    path: /root/db/finance
                    type: Directory
